--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,29 +2,33 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.6.0
     hooks:
+    -   id: check-executables-have-shebangs
         # Check for invalid files
     -   id: check-toml
         # Check Python files
-    -   id: fix-encoding-pragma
-        args: [--remove]
     -   id: end-of-file-fixer
+    -   id: fix-encoding-pragma
+        args: [ --remove ]
     -   id: mixed-line-ending
-        args: [--fix=lf]
+        args: [ --fix=lf ]
     -   id: check-executables-have-shebangs
+    -   id: requirements-txt-fixer
+    -   id: trailing-whitespace
+        args: [ --markdown-linebreak-ext=md ]
 -   repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 24.8.0
     hooks:
     -   id: black
-        args: [--line-length=120]
+        args: [ --line-length=120 ]
 -   repo: https://github.com/asottile/blacken-docs
-    rev: 1.14.0
+    rev: 1.16.0
     hooks:
     -   id: blacken-docs
-        args: [--line-length=120]
+        args: [ --line-length=120 ]
 -   repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
     -   id: isort
         args: ["--profile", "black"]
